<resources>
    <string name="app_name">Suitmedia</string>

    <string name="description_logo_app">this is suitmedia logo</string>
    <string name="description_user_photo">this is user photo</string>
    <string name="description_icon_guest">this is guest\'s picture</string>
    <string name="description_event_poster">this is event poster</string>
    <string name="description_back_button">this is back button</string>
    <string name="description_background">this is background</string>
    <string name="description_map">this is go to map button</string>

    <string name="text_name">Type your name in here</string>
    <string name="text_next">Done</string>
    <string name="text_change_language"><u>Change language</u></string>
    <string name="text_change_user"><u>Change user</u></string>
    <string name="text_input_name">Please type your name</string>
    <string name="text_hello">Hello!</string>
    <string name="text_user_name">User\'s name</string>
    <string name="text_events">Events</string>
    <string name="text_guest">Guests</string>
    <string name="text_event_name">Event name</string>
    <string name="text_event_date">date</string>
    <string name="text_choose_this">Choose this</string>
    <string name="text_guest_name">Guest\'s name</string>
    <string name="text_guest_birthdate">Guest\'s birthdate</string>
    <string name="text_choose_event">Choose Event</string>
    <string name="text_search">You are searching for</string>
    <string name="text_search_hint">Type here</string>
    <string name="text_choose_guest">Choose Guest</string>
    <string name="text_choose_photo">Please add your photo profile</string>
    <string name="text_choose_map">You choose map view</string>
    <string name="text_close">Closing The Application</string>
    <string name="asking_to_close">Do you want to close the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="palindrome">is palindrome</string>
    <string name="not_palindrome">is not palindrome</string>
    <string name="prime">The Month is a prime number</string>
    <string name="not_prime">The Month is not a prime number</string>

    <string name="welcome">Welcome!</string>
    <string name="desc_add_photo">Please add your photo.</string>
</resources>