<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_halo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:text="@string/text_hello"
            android:textSize="40sp"
            android:textColor="@color/brown"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="25dp"
            android:text="@string/text_user_name"
            android:textSize="18sp"
            android:textColor="@color/basic_color_orange"
            app:layout_constraintTop_toBottomOf="@id/tv_halo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_photo"/>

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/logo_white"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/description_user_photo" />

        <TextView
            android:id="@+id/text_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:text="@string/text_events"
            android:textSize="20sp"
            android:textColor="@color/brown"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_event"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="100dp"
            android:text="@string/text_choose_event"
            android:background="@drawable/rounder_orange_half_left"
            app:layout_constraintTop_toBottomOf="@id/text_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:text="@string/text_guest"
            android:textSize="20sp"
            android:textColor="@color/brown"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/btn_event"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_guest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100dp"
            android:text="@string/text_choose_guest"
            android:background="@drawable/rounder_orange_half_right"
            app:layout_constraintTop_toBottomOf="@id/text_guest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="100dp"
            android:text="@string/text_change_language"
            android:background="@drawable/rounder_orange_half_left"
            app:layout_constraintTop_toBottomOf="@id/btn_guest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_changeUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginEnd="100dp"
            android:text="@string/text_change_user"
            android:background="@drawable/rounder_orange_half_right"
            app:layout_constraintTop_toBottomOf="@id/btn_language"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>