<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cfdbd5"
    tools:context=".event.EventActivity">

    <ImageView
        android:id="@+id/iv_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/rounder_orange_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/description_background"/>

    <TextView
        android:id="@+id/tv_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_events"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/iv_layout"
        app:layout_constraintBottom_toBottomOf="@id/iv_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:src="@drawable/ic_back_white"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/description_back_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_event"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="115dp"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_event"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>