<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@color/black"
    app:contentPadding="1dp"
    style="@style/CardView.Light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_eventPhoto"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:src="@drawable/logo_white"
            android:contentDescription="@string/description_event_poster"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_eventName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:text="@string/text_event_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/iv_eventPhoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_eventDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/text_event_date"
            android:textSize="14sp"
            android:textColor="@color/brown"
            app:layout_constraintTop_toBottomOf="@id/tv_eventName"
            app:layout_constraintEnd_toStartOf="@id/iv_eventPhoto"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_themeEvent1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            android:padding="3dp"
            android:text="@string/text_event_date"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:background="@color/basic_color_orange"
            app:layout_constraintTop_toBottomOf="@id/tv_eventDate"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_descEvent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:padding="3dp"
            android:text="@string/text_event_date"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:maxLines="4"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/tv_themeEvent1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_eventPhoto"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>